--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
 body{
   height: 100vh;
   background-image: linear-gradient(#00d4ff,#090979);
-  font-family: poppins;
+  font-family: 'poppins';
 }
